frontend/src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
    .container {
        @apply max-w-[1700px];
    }
}

html, body {
    margin: 0;
    min-height: 100%;
    background-color: transparent;
    position: relative;
}
@media screen and (max-width: 768px) {
    html, body {
        font-size: 12px;
    }
}

.lds-ring {
    display: inline-block;
    position: relative;
    height: 100%;
    aspect-ratio: 1/1;
    min-height: 100%;
}
.lds-ring div {
    box-sizing: border-box;
    display: block;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    position: absolute;
    width: 60%;
    height: 60%;
    border: 4px solid #fff;
    border-radius: 50%;
    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
    border-color: #fff transparent transparent transparent;
}
.lds-ring div:nth-child(1) {
    animation-delay: -0.45s;
}
.lds-ring div:nth-child(2) {
    animation-delay: -0.3s;
}
.lds-ring div:nth-child(3) {
    animation-delay: -0.15s;
}
@keyframes lds-ring {
    0% {
        transform: translate(-50%, -50%) rotate(0deg);
    }
    100% {
        transform: translate(-50%, -50%) rotate(360deg);
    }
}

input, textarea{
    outline: none;
}

.arrow {
    border: solid black !important;
    border-width: 0 3px 3px 0 !important;
    padding: 3px !important;
}
.slick-prev:before, .slick-next:before{
    content: '' !important;
}

.grecaptcha-badge{
    display: none !important;
}

.wave {
    background: url(/path9.svg) repeat-x;
    background-size: 10% 100%;
    position: absolute;
    bottom: 0;
    width: 1000%;
    height: 60%;
    animation: wave 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) infinite;
    z-index: 1;
}

.wave:nth-of-type(2) {
    animation: wave 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) -.125s infinite, swell 3s ease -1.25s infinite;
    opacity: 0.8;
    z-index: 0;
}

@keyframes wave {
    0% {
        margin-left: 0;
    }
    100% {
        margin-left: -500%;
    }
}

@keyframes swell {
    0%, 100% {
        transform: translate3d(0,-3px,0);
    }
    50% {
        transform: translate3d(0,0px,0);
    }
}
.quarter_ring {
    width: 100%;
    height: 100%;
    background: radial-gradient(ellipse at 100% 100%, transparent 0%, transparent 24%, #BEC3C7 25%, #BEC3C7 42%, #E3E7E8 43%, #E3E7E8 62%, transparent 63%, transparent 100%);
}
.circle-animation{
    background: url("/g1313.svg");
    background-size: 100% 100%;
    animation: rotation 8s infinite linear;
}

@keyframes rotation {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(-359deg);
    }
}


.water-meter-animation{
    animation: water-meter 3s infinite linear;
}

@keyframes water-meter {
    0%, 100% {
        transform: rotate(0deg);
    }
    20% {
        transform: rotate(45deg);
    }
    40% {
        transform: rotate(0deg);
    }
    60% {
        transform: rotate(110deg);
    }
    80% {
        transform: rotate(0deg);
    }
}

.valve-handle-animation{
    animation: valve-handle 10s infinite linear;
}

@keyframes valve-handle {
    0%, 100% {
        transform: rotate(0deg);
    }
    30% {
        transform: rotate(0deg);
    }
    50% {
        transform: rotate(90deg);
    }
    80% {
        transform: rotate(90deg);
    }
}

.water-droplet-animation{
    animation: water-droplet 0.6s infinite linear;
    transform: rotate(225deg);
}
.water-droplet-animation-2{
    animation: water-droplet 1.1s infinite linear;
    transform: rotate(225deg);
}
.water-droplet-animation-3{
    animation: water-droplet 0.8s infinite linear;
    transform: rotate(225deg);
}

@keyframes water-droplet {
    0% {
        transform: translate(0, 0) rotate(225deg) rotateX(0deg);

    }
    50% {
        transform: translate(0, -15px) rotate(225deg) rotateX(45deg);
        opacity: 0.6;
    }
    100% {
        transform: translate(0, -30px) rotate(225deg) rotateX(45deg);
        opacity: 0;
    }
}

.wheel-valve-handle-animation{
    animation: wheel-valve-handle 13s infinite ease-in-out;
}

@keyframes wheel-valve-handle {
    0%, 100% {
        transform: rotate(0deg);
    }
    50% {
        transform: rotate(-1500deg);
    }
}
.hover-underline-animation {
    display: inline-block;
    position: relative;
}
.hover-underline-animation::after {
    content: '';
    position: absolute;
    width: 100%;
    transform: scaleX(0);
    height: 2px;
    bottom: 0px;
    left: 0;
    transform-origin: bottom left;
    transition: transform 0.25s ease-out;
}

.hover-underline-animation:hover::after {
    transform: scaleX(1);
    transform-origin: bottom left;
}
.slick-disabled{
    opacity: 0.4 !important;
    cursor: default;
}

.drop{
    position: relative;
    width: 150px;
    height: 150px;
    box-shadow: inset 10px 10px 10px rgba(0,0,0,0.05),
    15px 25px 10px rgba(0,0,0,0.1),
    15px 20px 20px rgba(0,0,0,0.05),
    inset -10px -10px 15px rgba(255,255,255,0.9);
    border-radius: 54% 46% 39% 61% / 50% 45% 55% 50%;
    background-color: #f0f0f0;
}
.drop-second{
    border-radius: 52% 48% 60% 40% / 43% 55% 45% 57% ;
}
.drop::before{
    content: '';
    position: absolute;
    top: 35px;
    left: 25px;
    width: 20px;
    height: 20px;
    border-radius: 50%;
    background-color: white;
}
.drop::after{
    content: '';
    position: absolute;
    top: 25px;
    left: 50px;
    width: 10px;
    height: 10px;
    border-radius: 50%;
    background-color: white;
}

